--- a/package.json
+++ b/package.json
@@ -76,6 +76,10 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node" : "16.15.0",
+    "npm" : "8.5.5"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
